# monorepo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: backend-ci-cd.yml  frontend-ci-cd.yml
backend/: .flake8  lambda_function.py  test_lambda_function.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.js  App.test.js
