[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Guan Huang <Guan.Huang@team.telstra.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
