[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Guan Huang <Guan.Huang@team.telstra.com>"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
